# agent2agent

./: .gitignore  README.md
a2a_friend_scheduling/: .env  .env.example  README.md  demo_relay.py  requirements.txt
a2a_friend_scheduling/host_agent_adk/: pyproject.toml
a2a_friend_scheduling/host_agent_adk/host/: agent.py  remote_agent_connection.py
a2a_friend_scheduling/kaitlynn_agent_langgraph/: pyproject.toml
a2a_friend_scheduling/kaitlynn_agent_langgraph/app/: __main__.py  agent.py
a2a_friend_scheduling/karley_agent_adk/: __main__.py  pyproject.toml
a2a_friend_scheduling/moqt_certs/: cert.pem  key.pem
a2a_friend_scheduling/moqt_transport/: __init__.py  __main__.py  certs.py  client.py  protocol.py  relay.py  server.py  test_moqt.py
a2a_friend_scheduling/nate_agent_crewai/: __main__.py  pyproject.toml
